--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@
                 console.log(d)
 
                 if (d.success) {
-                    window.location.href = '/';
+                    window.location.href = 'index';
                 } else {
 
                    window.location.href = 'error.html';
