--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -62,7 +62,8 @@
                     window.location.href = 'index';
                 } else {
 
-                   window.location.href = 'error.html';
+                        alert("账号或者密码错误！");//显示带有一条指定消息和一个 OK 按钮的警告框
+
                 }
             }
         })
