--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -28,12 +28,12 @@
 
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span th:text="${session.user.getName()}"></span>
+                        <span th:text="${session.user.getAccountId()}"></span>
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/profile/questions">个人中心</a></li>
                         <li><a href="#">个人资料</a></li>
-                        <li><a href="#">退出登录</a></li>
+                        <li><a href="/logout">退出登录</a></li>
                     </ul>
                 </li>
                 <li th:if="${session.user == null}"><a href="/login">登录</a></li>
