--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
                         <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
                     </h4>
                     <span th:text="${question.description}"></span> <br>
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复 <span th:text="${question.likeCount}"></span>次浏览
+                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复 <span th:text="${question.viewCount}"></span>次浏览
                         &nbsp;&nbsp;&nbsp;&nbsp;   <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span></span>
                 </div>                                                 <!--thymeleaf中的日期格式化用#dates.format来解决-->
             </div>
