--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复 <span th:text="${question.likeCount}"></span>次浏览
+                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复 <span th:text="${question.viewCount}"></span>次浏览
                         &nbsp;&nbsp;&nbsp;&nbsp;   <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span></span>
                 </div>                                                 <!--thymeleaf中的日期格式化用#dates.format来解决-->
             </div>
