--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -19,7 +19,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <!--正文-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4><span th:text="${question.title}"></span></h4>
+                <h4 class="question-title"><span th:text="${question.title}"></span></h4>
                 <span class="text-desc">
                 作者：<span th:text="${question.user.accountId }"></span>&nbsp;&nbsp;&nbsp;&nbsp;
                 阅读量：<span th:text="${question.viewCount}"></span>
@@ -67,6 +67,7 @@
                 </div>
             </div>
         </div>
+
         <!--右边页面内容-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
