--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -9,6 +9,7 @@
     <script src="/js/jquery-3.4.1.min.js" type="application/javascript"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="/js/community.js" type="application/javascript"></script>
+    <script src="/js/moment.js" type="application/javascript"></script>
 
 </head>
 <body>
@@ -42,16 +43,47 @@
                 </h4>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:each="comment : ${comments}">
-                    <div class="media-body">
+                    <div class="media-body" th:id="${'comment-body-'+comment.id}">
                         <h5 class="media-heading">
                             <span th:text="${comment.user.accountId}"></span>
                         </h5>
                         <div th:text="${comment.content}"></div>
                         <div class="menu">
+                            <span class="comment-icon">
                             <span class="glyphicon glyphicon-thumbs-up icon"></span>
-                            <span class="glyphicon glyphicon-comment icon"></span>
+                            <span th:data-id="${comment.id}"
+                                  onclick="openComments(this)" >
+                            <span class="glyphicon glyphicon-comment "></span> <!--回复图标-->
+                            <span th:text="${comment.commentCount}"></span>
+                            </span></span>
+
                             <span class="pull-right"
                                   th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>
+                        </div>
+                        <!--二级评论-->
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse comment-2"
+                             th:id="${'comment-'+comment.id}">
+                            <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"-->
+                            <!--th:each="comment : ${comments}">-->
+                            <!--<div class="media-body">-->
+                            <!--<h5 class="media-heading">-->
+                            <!--<span th:text="${comment.user.accountId}"></span>-->
+                            <!--</h5>-->
+                            <!--<div th:text="${comment.content}"></div>-->
+                            <!--<div class="menu">-->
+                            <!--<span class="pull-right"-->
+                            <!--th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>-->
+                            <!--</div>-->
+                            <!--</div>-->
+                            <!--<hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">-->
+                            <!--</div>-->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <input type="text" class="form-control " placeholder="评论"
+                                       th:id="${'input-'+comment.id}">
+                                <button type="button" class="btn btn-success pull-right" onclick="comment(this)"
+                                        th:data-id="${comment.id}">评论
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
