--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -28,13 +28,23 @@
                 发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span>
             </span>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <!--正文内容-->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <!--标签-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <span class="label label-info question-tag  " th:each="tag:${question.tag.split(',')}">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <span class="label label-info " th:text="${tag}"></span>
+                    </span>
+                </div>
 
-                <a th:href="@{'/publish/'+${question.id}}" class=" question-menu"
-                   th:if="${session.user !=null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
-                </a>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <!--编辑-->
+                    <a th:href="@{'/publish/'+${question.id}}" class=" question-menu pull-left"
+                       th:if="${session.user !=null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
             </div>
             <!--回复内容-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -52,7 +62,7 @@
                             <span class="comment-icon">
                             <span class="glyphicon glyphicon-thumbs-up icon"></span>
                             <span th:data-id="${comment.id}"
-                                  onclick="openComments(this)" >
+                                  onclick="openComments(this)">
                             <span class="glyphicon glyphicon-comment "></span> <!--回复图标-->
                             <span th:text="${comment.commentCount}"></span>
                             </span></span>
@@ -110,9 +120,15 @@
                     </h4>
                 </div>
             </div>
+            <!--相关问题-->
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3>相关问题</h3>
+                <ul class="question-related">
+                    <li th:each="related : ${relatedQuestions}">
+                        <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
             </div>
 
         </div>
