--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="/css/community.css"/>
-    <script src="/js/jquery-3.4.1.min.js" ></script>
+    <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 
 </head>
@@ -20,13 +20,17 @@
             <div class="media" th:each="question : ${pagination.questions}">
                 <div class="media-left">
                     <a href="#">
-                        <img class="media-object img-thumbnail" src="/static/images/photo.jpg" >
+                        <img class="media-object img-thumbnail" src="/static/images/photo.jpg">
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复 <span th:text="${question.viewCount}"></span>次浏览
-                        &nbsp;&nbsp;&nbsp;&nbsp;   <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span></span>
+                    <h4 class="media-heading">
+                        <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
+                    </h4>
+                    <span class="text-desc"><span th:text="${question.commentCount}"></span>个回复 <span
+                            th:text="${question.viewCount}"></span>次浏览&nbsp;&nbsp;&nbsp;&nbsp;   <span
+                            th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span>
+                    </span>
                 </div>                                                 <!--thymeleaf中的日期格式化用#dates.format来解决-->
             </div>
             <nav aria-label="Page navigation">
@@ -43,7 +47,7 @@
                     </li>
 
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page == page}? 'active': ''"><a
-                            th:href="@{/profile/questions/(page=${page})}" th:text="${page} " ></a></li>
+                            th:href="@{/profile/questions/(page=${page})}" th:text="${page} "></a></li>
 
 
                     <li th:if="${pagination.showNext}">
@@ -59,17 +63,19 @@
             </nav>
 
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" >
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
-                <a href="/profile/questions" th:class="${section == 'questions'}? 'active list-group-item': 'list-group-item'" >我的问题</a>
-                <a href="/profile/replies"  th:class="${section == 'replies'}? 'active list-group-item': 'list-group-item'">最新回复
+                <a href="/profile/questions"
+                   th:class="${section == 'questions'}? 'active list-group-item': 'list-group-item'">我的问题</a>
+                <a href="/profile/replies"
+                   th:class="${section == 'replies'}? 'active list-group-item': 'list-group-item'">最新回复
                     <span class="badge">14</span>
                 </a>
             </div>
         </div>
 
     </div>
-    </div>
+</div>
 </div>
 </body>
 </html>
