--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -17,7 +17,9 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${sectionName}"></span></h2>
             <hr>
-            <div class="media" th:each="question : ${pagination.questions}">
+            <!--我的问题-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}">
+            <div class="media" th:each="question : ${pagination.data}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-thumbnail" src="/static/images/photo.jpg">
@@ -33,6 +35,23 @@
                     </span>
                 </div>                                                 <!--thymeleaf中的日期格式化用#dates.format来解决-->
             </div>
+
+            </div>
+            <!--最新回复-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies'}">
+                <div class="media" th:each="notification : ${pagination.data}">
+                    <div class="media-body">
+                        <p class="media-heading">
+                            <span th:text="${notification.notifierName +''+notification.typeName + ' '}"></span>
+                            <a th:href="@{'/notification/'+${notification.id}}"
+                               th:text="${notification.outerTitle}"></a>
+                            <span class="label label-primary" th:if="${notification.status == 0}">未读</span>
+                        </p>
+                    </div>
+                </div>
+        </div>
+            <!--分页-->
+            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.showFirstPage}">
@@ -60,16 +79,15 @@
                         </a>
                     </li>
                 </ul>
-            </nav>
-
-        </div>
+            </nav></div></div>
+        <!--右边-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
                 <a href="/profile/questions"
                    th:class="${section == 'questions'}? 'active list-group-item': 'list-group-item'">我的问题</a>
                 <a href="/profile/replies"
                    th:class="${section == 'replies'}? 'active list-group-item': 'list-group-item'">最新回复
-                    <span class="badge">14</span>
+                    <span class="badge" th:text="${session.unreadCount}"></span>
                 </a>
             </div>
         </div>
