--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -43,6 +43,9 @@
                             height: "340px",
                             path: "/js/lib/",
                             delay: 0,
+                            imageUpload:true,
+                            imageFormats:["jpg","jpeg","gif","png","bmp","webp"],
+                            imageUploadURL:"/file/upload",
                             watch: false,
                             placeholder:"请输入正文内容，支持支持通用 Markdown / CommonMark 和 GFM风格的语法",
                             //自定功能
